# space

./: .gitignore  .release-plz.toml  .taplo.toml  CONTRIBUTING.md  Cargo.toml  README.md  SUMMARY.md  book.toml  justfile  rust-toolchain.toml
.github/: labels.yaml  pull_request_template.md
.github/workflows/: book.yaml  check.yaml  release.yaml  rust.yaml
algebra/: CHANGELOG.md  Cargo.toml  README.md
algebra/src/: arithmetic.rs  group.rs  lib.rs  linear.rs  modular.rs  module.rs  ring.rs  rings.rs  semimodule.rs  semiring.rs  vector.rs
algebra/src/algebras/: boolean.rs  clifford.rs  mod.rs  tropical.rs  tropical_poly.rs
algebra/src/arithmetic/: mod.rs  modular.rs  primitive.rs
algebra/src/group/: mod.rs
algebra/src/modules/: mod.rs  trivial.rs
algebra/src/semimodule/: mod.rs  tropical.rs
algebra/src/tensors/: fixed.rs  mod.rs
algebra/src/tensors/dynamic/: block.rs  matrix.rs  mod.rs  vector.rs
cat/: Cargo.toml
cat/src/: categories.rs
common/: Cargo.toml
common/src/: error.rs
cova/: CHANGELOG.md  Cargo.toml  README.md
cova-algebra/: CHANGELOG.md  Cargo.toml  README.md
cova-algebra/src/: groups.rs  lib.rs  rings.rs
cova-algebra/src/algebras/: boolean.rs  clifford.rs
cova-algebra/src/arithmetic/: mod.rs  modular.rs  primitive.rs
cova-algebra/src/modules/: mod.rs  trivial.rs  tropical.rs
cova-algebra/src/tensors/: fixed.rs  mod.rs
cova-algebra/src/tensors/dynamic/: block.rs  matrix.rs  mod.rs  vector.rs
cova-solver/: CHANGELOG.md  Cargo.toml  README.md
cova-solver/examples/: admm_example.rs
cova-solver/src/: admm.rs  error.rs  lib.rs  linear_programming.rs  traits.rs
cova-solvers/: Cargo.toml
cova-space/: CHANGELOG.md  Cargo.toml  README.md
cova-space/src/: cloud.rs  definitions.rs  graph.rs  homology.rs  lattice.rs  lib.rs  set.rs  sheaf.rs
cova-space/src/complexes/: cubical.rs  mod.rs  simplicial.rs
cova-space/src/filtration/: vietoris_rips.rs
cova/src/: lib.rs
crates/algebra/src/: category.rs  lib.rs
crates/algebra/src/arithmetic/: modular.rs  primitive.rs
crates/algebra/src/modules/: trivial.rs  tropical.rs
crates/algebra/src/tensors/: fixed.rs  mod.rs
crates/algebra/src/tensors/dynamic/: vector.rs
crates/harness/: Cargo.toml
crates/harness/src/: lib.rs
crates/space/: Cargo.toml
crates/space/src/: definitions.rs  sheaf.rs
crates/space/src/complexes/: simplicial.rs
crates/space/src/filtration/: mod.rs
examples/: README.md
examples/vietoris_web/: Cargo.toml  README.md  build-optimized.sh  build.rs  build_wasm.sh  index.html
examples/vietoris_web/src/: lib.rs  main.rs
space/: CHANGELOG.md  Cargo.toml  README.md  test_cell_complex_2d.dot
space/src/: cell.rs  cloud.rs  definitions.rs  error.rs  graph.rs  homology.rs  lattice.rs  lib.rs  poset.rs  set.rs  sheaf.rs  simplicial.rs
space/src/complexes/: cell.rs  cubical.rs  mod.rs  simplicial.rs
space/src/complexes/simplicial/: mod.rs  tests.rs
space/src/filtration/: mod.rs  vietoris_rips.rs
space/src/simplicial/: mod.rs  tests.rs
src/: definitions.rs  graph.rs  lib.rs  simplicial.rs
