[workspace]
members  = ["crates/*"]
resolver = "2"

[workspace.package]
authors     = ["Harness Labs"]
description = "Mathematics monorepo in Rust."
edition     = "2021"
keywords    = ["mathematics", "topology", "algebra"]
license     = "MIT"
readme      = "README.md"
repository  = "https://github.com/harness-labs/harness"
version     = "0.1.0"

[workspace.dependencies]
# Local dependencies
harness-algebra = { path = "crates/algebra", version = "=0.5.0" }
harness-space   = { path = "crates/space", version = "=0.6.0" }

# External dependencies
itertools  = { version = "0.14", default-features = false }
num-traits = { version = "0.2", default-features = false }
rayon      = { version = "1.10", default-features = false }


# Development dependencies
tempfile = { version = "3.19" }
