[workspace]
members  = ["cova", "cova-space", "cova-algebra"]
resolver = "2"

[workspace.dependencies]
# Local dependencies
cova-algebra = { path = "cova-algebra", version = "=0.1.0" }
cova-space   = { path = "cova-space", version = "=0.1.0" }

# External dependencies
itertools  = { version = "0.14", default-features = false }
num-traits = { version = "0.2", default-features = false }
rayon      = { version = "1.10", default-features = false }


# Development dependencies
tempfile = { version = "3.20" }
