[workspace]
members  = ["cova", "cova-space", "cova-algebra", "cova-solver"]
resolver = "2"

[workspace.dependencies]
# Local dependencies
cova-algebra = { path = "cova-algebra", version = "=0.1.3" }
cova-solver  = { path = "cova-solver", version = "=0.1.0" }
cova-space   = { path = "cova-space", version = "=0.2.1" }

# External dependencies
itertools  = { version = "0.14", default-features = false }
nalgebra   = { version = "0.33", default-features = false }
num-traits = { version = "0.2", default-features = false }
rayon      = { version = "1.10", default-features = false }
thiserror  = { version = "2.0", default-features = false }

# Development dependencies
tempfile = { version = "3.20" }

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
panic         = "abort"
strip         = true
