[package]
name = "harness-algebra"

authors     = ["Harness Labs"]
description = "The library for algebraic structures"
edition     = "2021"
keywords    = ["mathematics", "algebra"]
license     = "AGPL-3.0"
readme      = "README.md"
repository  = "https://github.com/harness-labs/space"
version     = "0.2.0"

[dependencies]
num-traits = { workspace = true }
