[package]
name = "harness-algebra"

authors     = ["Harness Labs"]
description = "The library for algebraic structures"
edition     = "2021"
keywords    = ["mathematics", "algebra"]
license     = "MIT"
readme      = "README.md"
repository  = "https://github.com/harness-labs/space"
version     = "0.2.4"

[dependencies]
num-traits = { workspace = true }
