[package]
name = "harness-algebra"

authors     = ["Harness Labs"]
description = "The library for algebraic structures"
edition     = "2021"
keywords    = ["mathematics", "algebra"]
license     = "MIT"
readme      = "README.md"
repository  = "https://github.com/harness-labs/space"
version     = "0.5.0"

[dependencies]
num-traits = { workspace = true }
