[package]
name = "harness-cat"

authors     = ["Harness Labs"]
description = "The library for topological and other spaces"
edition     = "2021"
keywords    = ["mathematics", "topology"]
license     = "AGPL-3.0"
readme      = "README.md"
repository  = "https://github.com/harness-labs/cat"
version     = "0.1.0"

[dependencies]
candle-core = { workspace = true }
harness-space = { workspace = true }
harness-common = { workspace = true }