[package]
name = "cova-algebra"

authors     = ["Harness Labs"]
description = "Cova's algebraic library"
edition     = "2021"
keywords    = ["mathematics", "algebra"]
license     = "MIT"
readme      = "README.md"
repository  = "https://github.com/harness-labs/cova"
version     = "0.1.0"

[dependencies]
num-traits = { workspace = true }
