[package]
name = "cova-algebra"

authors     = ["Harness Labs"]
description = "Cova's algebraic library"
edition     = "2021"
keywords    = ["mathematics", "algebra"]
license     = "AGPL-3.0"
readme      = "README.md"
repository  = "https://github.com/harnesslabs/cova"
version     = "0.1.1"

[dependencies]
num-traits = { workspace = true }
