[package]
name = "cova-solvers"

authors     = ["Harness Labs"]
description = "Cova's solvers library"
edition     = "2021"
keywords    = ["mathematics", "algebra", "solvers", "numerical"]
license     = "AGPL-3.0"
readme      = "README.md"
repository  = "https://github.com/harnesslabs/cova"
version     = "0.1.0"

[dependencies]
num-traits = { workspace = true }
