[package]
name = "cova"

authors     = ["Harness Labs"]
description = "First principles, minimally dependent, geometric and topologically focused math library"
edition     = "2021"
keywords    = ["mathematics", "topology", "geometry"]
license     = "AGPL-3.0"
readme      = "README.md"
repository  = "https://github.com/harnesslabs/cova"
version     = "0.1.1"

[dependencies]
cova-algebra = { workspace = true }
cova-space   = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }


[features]
parallel = ["cova-space/parallel"]
