[package]
name = "harness-space"

authors     = ["Harness Labs"]
description = "The library for topological and other spaces"
edition     = "2021"
keywords    = ["mathematics", "topology"]
license     = "MIT"
readme      = "README.md"
repository  = "https://github.com/harness-labs/space"
version     = "0.3.0"

[dependencies]
harness-algebra = { workspace = true }
itertools       = { workspace = true }
num-traits      = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
