[package]
authors = ["Harness Labs"]
description = "Interactive Vietoris-Rips Complex Demo"
edition = "2021"
name = "vietoris-web-demo"
version = "0.1.0"

[workspace]

# This is a standalone binary
[[bin]]
name = "vietoris_web"
path = "src/main.rs"

[dependencies]
# Local crates from the workspace
cova-algebra = { path = "../../cova-algebra" }
cova-space = { path = "../../cova-space" }

# Web server dependencies
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3"

# WASM dependencies (conditionally compiled)
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = [
    "console",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "MouseEvent",
    "Element",
    "Document",
    "Window",
    "Event",
    "EventTarget",
], optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "web-sys", "js-sys", "console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]
