[package]
authors     = ["Harness Labs"]
description = "Interactive Vietoris-Rips Complex Demo using cova"
edition     = "2021"
name        = "vietoris-web-demo"
version     = "0.1.0"

[workspace]

# Server binary
[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1" }
cova = { path = "../../cova" }
getrandom = { version = "0.2", features = ["js"] }
js-sys = { version = "0.3" }
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = [
  "console",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "HtmlInputElement",
  "MouseEvent",
  "Element",
  "Document",
  "Window",
  "Event",
  "EventTarget",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
warp  = { version = "0.3" }

[lib]
crate-type = ["cdylib", "rlib"]
